2010-06-23  Matthew Mundell <matthew.mundell@greenbone.net>

	Rename GET_NVT_DETAILS to GET_NVTS.

	* src/gsad.c (init_validator): Remove get_nvt_details.  Add get_nvts.
	(exec_omp_get): Call get_nvts_omp instead of get_nvt_details_omp.  Replace
	"get_nvt_details" page name args with "get_nvts".

	* src/gsad_omp.c: Replace get_nvt_details in comments and docs.
	(get_nvt_details, get_nvt_details_omp): Remove.
	(get_nvts, get_nvts_omp): New function.  Rename from "nvt_details"
	version.  Update callers.
	(get_config_nvt_omp, get_config_family_omp): Replace get_nvt_details
	command.  Add details attribute.
	(delete_note_omp, save_note_omp, delete_override_omp): Replace
	get_nvt_details in page name comparison.

	* src/gsad_omp.h: Update header accordingly.

	* src/html/omp.xsl (get_nvt_details): Remove.
	(get_nvt): New template.  Renamed from get_nvt_details_response.
	(html-config-family-table, html-config-nvt-table): Replace "nvt_details"
	with "nvts".

2010-06-22  Matthew Mundell <matthew.mundell@greenbone.net>

	Rename ABORT_TASK to STOP_TASK.

	* src/gsad.c (init_validator): Remove abort_task.  Add stop_task.
	(exec_omp_get): Call stop_task_omp instead of abort_task_omp.

	* src/gsad_omp.c (abort_task_omp): Remove.
	(stop_task_omp): New function.  Rename from "abort" version.

	* src/gsad_omp.h: Update header accordingly.

	* src/html/help.xsl (tasks.html): Replace "abort" with "stop".

	* src/html/omp.xsl (abort_task_response): Remove.
	(stop_task_response): New template.  Renamed from abort_task_response.
	(task): Replace "abort" with "stop".

2010-06-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Add _ to credential_login chars.

2010-06-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (task): Also pass apply_override through to task
	details page.

2010-06-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_tasks_response): Improve operation name.
